# Fahrspurerkennung-f-ur-autonome-Fahrzeuge-basierend-auf-OpenCV

./: CMakeLists.txt  README.md  main.cpp  oldCode.cpp
